[tool.poetry]
name = "selenium-cookies"
version = "0.1.0"
description = ""
authors = ["morgan-young <morganyoung1212@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.*"
selenium = "4.5.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
